Added loading feature

--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+
+    <!-- Loader : https://loading.io/css/ -->
+    <div class="lds-dual-ring" id='loader'></div>
 </body>
 </html>
